# Serverless-Passkey

./: .gitignore  .gitmodules  package-lock.json  package.json
PQClean/crypto_sign/ml-dsa-44/clean/: ml_dsa_wrapper.c
app/: .gitignore  flutter_launcher_icons.yaml  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/cpp/: CMakeLists.txt  ml_dsa_flutter_wrapper.c
app/android/app/src/main/cpp/ml-dsa-44/clean/: ml_dsa.js  ml_dsa.wasm  ml_dsa_wrapper.c
app/ios/Runner/: Info.plist
app/lib/: main.dart
app/lib/screens/: broadcasting.dart  generate_key_screen.dart  home_screen.dart  signup_screen.dart  splash_screen.dart  website_log_screen.dart
app/lib/services/: api_service.dart  key_utils.dart  native_ble_plugin.dart
app/lib/utils/: key_utils.dart
app/lib/widgets/: app_scaffold.dart  starry_background.dart
app/macos/Flutter/: GeneratedPluginRegistrant.swift
app/native/: ml_dsa_flutter_wrapper.c
app/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
verifier-web/: .gitignore  index.html  package-lock.json  package.json
verifier-web/backend/: .env  db.js  index.js  package-lock.json  package.json
verifier-web/backend/models/: Device.js  User.js
verifier-web/backend/routes/: auth.js  device.js
verifier-web/public/: ml-dsa-broken.js  ml_dsa.js  ml_dsa.wasm  ml_dsa_original.js
verifier-web/src/: App.css  App.jsx  CelestialEvents.jsx  Starfield.jsx  main.jsx
verifier-web/src/components/: DashboardPage.jsx  LoginPage.jsx  PasskeyUI.jsx  SignupPage.jsx
(+1 files in other folders)
